Enhance heart button styles for touch devices
Add touch-action and user-select styles to heart button.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
             transition: all 0.3s;
             box-shadow: 0 10px 30px rgba(255, 20, 147, 0.4);
             position: relative;
+            touch-action: manipulation;
+            -webkit-user-select: none;
+            user-select: none:
         }
 
         .heart-button:active {
